alb-01.template.yml
AWSTemplateFormatVersion: "2010-09-09"

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Parameters:
          - ClusterName
          - VPCID
          - ALBSubnetIDs
Parameters:
  ClusterName:
    Type: "String"
    Description: "Enter the name of the ECS Cluster."
    Default: "sample-ecs-cluster"
  VPCID:
    Type: "AWS::EC2::VPC::Id"
    Description: "Select at your VPC."
  ALBSubnetIDs:
    Type: "List<AWS::EC2::Subnet::Id>"
    Description: "Select a subnet from two or more availability-zones."

Resources:
  # セキュリティグループの作成
  ALBSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupName: !Sub "${ClusterName}-alb-sg"
      GroupDescription: "Allow port 80 and port 443."
      VpcId: !Ref VPCID
      # ALBは80ポートと443ポートを開放しておく
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: "80"
          ToPort: "80"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: "tcp"
          FromPort: "443"
          ToPort: "443"
          CidrIp: "0.0.0.0/0"
      # タグに名前を入れておく
      Tags:
        - Key: "Name"
          Value: !Sub "${ClusterName}-alb-sg"

  # ALBの作成
  ApplicationLoadBalancer:
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties: 
      Name: !Sub "${ClusterName}-alb"
      SecurityGroups: 
        - !Ref ALBSecurityGroup
      Subnets: !Ref ALBSubnetIDs
      Tags: 
        - Key: "Name"
          Value: !Sub "${ClusterName}-alb"
      Type: "application"

  # ターゲットグループの作成
  ALBTargetGroup:
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    Properties:
      Name: !Sub "${ClusterName}-tg"
      # ヘルスチェックを有効にする
      HealthCheckEnabled: "true"
      # ヘルスチェックの実行間隔
      HealthCheckIntervalSeconds: "30"
      # ヘルスチェックのタイムアウト時間
      HealthCheckTimeoutSeconds: "5"
      # ヘルスチェック失敗と見なすまでの回数
      HealthyThresholdCount: "5"
      # ヘルスチェック時の確認パス
      HealthCheckPath: "/"
      HealthCheckProtocol: "HTTP"
      # ヘルスチェックで200コードが返ってくればOK
      Matcher:
        HttpCode: "200"
      Protocol: "HTTP"
      TargetType: ip
      Port: "80"
      VpcId: !Ref VPCID
      Tags: 
        - Key: "Name"
          Value: !Sub "${ClusterName}-tg"
  
  # HTTPS通信のリスナー設定
  HTTPSListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
       DefaultActions:
         - Type: "forward"
           TargetGroupArn: !Ref "ALBTargetGroup"
       LoadBalancerArn: !Ref "ApplicationLoadBalancer"
       Port: "80"
       Protocol: "HTTP"
